--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,12 +1,26 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif ;
+
+    --fonte2: 'Dancing Script', cursive;
+
+    --fonte3: 'Poppins', sans-serif;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    
 }
 
 html, body{
     min-height: 100vh;
+    font-family: var(--fonte1);
     background-color: darkgray;
 }
 header{
@@ -17,6 +31,8 @@ header{
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte3);
+    font-size: 10vw;
 }
 header p{
     padding-bottom: 50px;
@@ -35,6 +51,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte2);
+    font-size: 3.5vw;
 }
 
 .normal{
@@ -48,7 +66,8 @@ section{
 }
 
 .imagem p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.616);
 
 }
