--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -32,7 +32,7 @@ header h1{
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte3);
-    font-size: 10vw;
+    font-size: 5vw;
 }
 header p{
     padding-bottom: 50px;
@@ -52,7 +52,21 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte2);
-    font-size: 3.5vw;
+    font-size: 3vw;
+}
+
+section p{
+    padding-bottom: 2em;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    
 }
 
 .normal{
@@ -63,12 +77,16 @@ section{
 .imagem{
     background-color: rgba(0, 0, 0, 0.605);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.575);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.616);
+    text-shadow: 2px 2px 0px black;
 
 }
 
