--- a/exercicíos/Módulo 4/CAP 25 - Media Queries/mq002/estilos/style.css
+++ b/exercicíos/Módulo 4/CAP 25 - Media Queries/mq002/estilos/style.css
@@ -1,3 +1,24 @@
 @charset "UTF-8";
 
 /* Configurações Gerais */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: #fff;
+    padding: 10px;
+    text-shadow: 2px 2px 0px #233dff71;  
+}
