--- a/exercicíos/Módulo 4/CAP 25 - Media Queries/mq004/estilo/medias-query.css
+++ b/exercicíos/Módulo 4/CAP 25 - Media Queries/mq004/estilo/medias-query.css
@@ -2,3 +2,89 @@
 
 /* Todas as demais medias */
 
+/* Typical Device Breakpoints 
+
+pequenas telas: até 600px
+telefone: 600px — 768px
+Tablet: 768px — 992px
+Desktops: 992px — 1200px
+Grandes telas: 1201px and more
+
+*/
+
+@media print {
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    body {
+        background-image: url("../imagens/back-print.jpg");
+    }
+
+    main {
+        border: 2px solid black;
+    }
+
+    main h1{
+        text-shadow: none;
+        color: black;  
+    }
+
+    img#phone { display: none; }
+    img#tablet { display: none;}
+    img#print { display: block;}
+    img#pc { display: none; }
+    img#tv { display: none; }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  /* Tablet */
+  body {
+    background-image: url("../imagens/back-tablet.jpg");
+  }
+
+  img#phone {
+    display: none;
+  }
+  img#tablet {
+    display: block;
+  }
+  img#print {
+    display: none;
+  }
+  img#pc {
+    display: none;
+  }
+  img#tv {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  /* Desktop */
+  body {
+    background-image: url('../imagens/back-pc.jpg');
+  }
+  img {
+    display: block;
+    margin: auto;
+  }
+  
+  img#phone { display: none; }
+  img#tablet { display: none;}
+  img#print { display: none;}
+  img#pc { display: block; }
+  img#tv { display: none; }
+}
+
+@media screen and (min-width: 1200px) {
+  /* Telas Grandes */
+  body {
+    background-image: url('../imagens/back-tv.jpg');
+  }
+  img#phone { display: none; }
+  img#tablet { display: none;}
+  img#print { display: none;}
+  img#pc { display: none; }
+  img#tv { display: block; }
+}
